--- a/app/notes/bali.mdx
+++ b/app/notes/bali.mdx
@@ -20,6 +20,13 @@ Amsterdam is the cheapest option, but all its flights leave early in the morning
 
 The ballpark price from Tenerife to Bali is $1000 before airline fees.
 
+## Phones
+
+Bali requires you to register your IMEI number on arrival. For visitors under 90 days, there's no tax, but for visitors over 90 days, you have to pay a ridiculous fee to keep it activated.
+
+There are allegedly some workarounds
+> I heard that SG sim cards work in Indo, so maybe get an eSIM from here: https://www.airalo.com/singapore-esim
+
 ## Where to stay
 
 The best snorkeling is in the northeast and then the west. Amed is top spot, but there's no nomad community there.
