--- a/app/notes/agent-portal.mdx
+++ b/app/notes/agent-portal.mdx
@@ -1,5 +1,7 @@
 export const title = 'Agent portal review'
 
+## Document categories cannot be deleted
+
 ## ~Authentication was broken~
 
 There were some updates needed to fix the Cognito setup and lack of SSR
