--- a/app/notes/html-concepts.mdx
+++ b/app/notes/html-concepts.mdx
@@ -115,7 +115,22 @@ HTML has six heading tags, `<h1>` through `<h6>`, used to mark headings on a pag
 
 Do not use heading tags just to change font sizes.
 
-You can only have one `<h1>` tag per page.
+You can only have one `<h1>` tag per page. For an article, this is usually the article title.
+
+Do not skip heading levels. `<h2>` tags are for splitting the topic declared with `<h1>` into more specific subcategories. `<h3>` tags are for further divisions, and so on.
+
+```html
+<h1> Hot drinks </h1>
+
+  <h2> Coffee </h2>
+    <h3> French press </h3>
+    <h3> Espresso </h3>
+    <h3> Aeropress </h3>
+
+  <h2> Tea </h2>
+    <h3> Loose tea </h3>
+    <h3> Compressed tea </h3>
+```
 
 ## Element with optional closing tags
 
