--- a/app/notes/html-concepts.mdx
+++ b/app/notes/html-concepts.mdx
@@ -7,9 +7,13 @@ There are only 5 non-semantic elements in HTML. They don't imply any particular 
 Non-semantic elements can be used for almost all situations, but `<div>` and `<span>` are by far the most common.
 
 `<div>` elements have `display: block;` by default
+ 
 `<span>` elements have `display: inline;` by default
+ 
 `<pre>` elements have `display:block; white-space: pre; font-family: monospace;` by default
+ 
 `<sub>` elements have `vertical-align: sub;` by default
+
 `<sup>` elements have `vertical-align: sup;` by default
 
 
@@ -25,7 +29,7 @@ To use a table analogy, consider inline elements like columns and block elements
 
 Semantic elements tell a browser what your content means.
 
-It is better to use non-semantic elements (like <div> and <span>) than the wrong semantic elements.
+It is better to use non-semantic elements (like `<div>` and `<span>`f) than the wrong semantic elements.
 
 ## Lists
 
