--- a/app/notes/uses.mdx
+++ b/app/notes/uses.mdx
@@ -12,8 +12,14 @@ export const title = 'Uses'
 
 * [Twelve South Magic Bridge](https://www.amazon.ca/Twelve-South-MagicBridge-Connects-Trackpad/dp/B01N9D63YE?tag=jacobparis-20) – This bridge keeps the keyboard and trackpad acting like a single unit which is great for sitting on the lap or working off the couch streaming from the TV
 
+# Software
+
+* VS Code
+
+* [Focus](https://heyfocus.com/) for productivity. This app allows me to temporarily block out distractions for when I really need to get work done.
+
 # Personal
 
-* Powerbeats 3 bluetooth headphones
+* MPOW Bluetooth Earphones
 
 * iPhone XR 
