--- a/app/notes/uses.mdx
+++ b/app/notes/uses.mdx
@@ -12,6 +12,14 @@ export const title = 'Uses'
 
 * [Twelve South Magic Bridge](https://www.amazon.ca/Twelve-South-MagicBridge-Connects-Trackpad/dp/B01N9D63YE?tag=jacobparis-20) – This bridge keeps the keyboard and trackpad acting like a single unit which is great for sitting on the lap or working off the couch streaming from the TV
 
+# Streaming
+
+Sony Alpha a6400 mirrorless camera
+
+Sigma 16mm 1.4f prime lens
+
+iogear camera capture card to usb c
+
 # Software
 
 * VS Code
