--- a/app/notes/html-concepts.mdx
+++ b/app/notes/html-concepts.mdx
@@ -29,7 +29,105 @@ To use a table analogy, consider inline elements like columns and block elements
 
 Semantic elements tell a browser what your content means.
 
-It is better to use non-semantic elements (like `<div>` and `<span>`f) than the wrong semantic elements.
+It is better to use non-semantic elements (like `<div>` and `<span>`) than the wrong semantic elements.
+
+- `<a>`
+- `<abbr>`
+- `<address>`
+- `<area>`
+- `<article>`
+- `<aside>`
+- `<audio>`
+- `<b>`
+- `<base>`
+- `<bdi>`
+- `<bdo>`
+- `<blockquote>`
+- `<body>`
+- `<br>`
+- `<button>`
+- `<canvas>`
+- `<caption>`
+- `<cite>`
+- `<code>`
+- `<col>`
+- `<colgroup>`
+- `<data>`
+- `<datalist>`
+- `<dd>`
+- `<del>`
+- `<details>`
+- `<dfn>`
+- `<dialog>`
+- `<dl>`
+- `<dt>`
+- `<em>`
+- `<embed>`
+- `<fieldset>`
+- `<figcaption>`
+- `<figure>`
+- `<footer>`
+- `<form>`
+- `<h1> to <h6>`
+- `<head>`
+- `<header>`
+- `<hr>`
+- `<html>`
+- `<i>`
+- `<iframe>`
+- `<img>`
+- `<input>`
+- `<ins>`
+- `<kbd>`
+- `<label>`
+- `<legend>`
+- [`<li>`](#Lists)
+- `<link>`
+- `<main>`
+- `<map>`
+- `<mark>`
+- `<meta>`
+- `<meter>`
+- [`<nav>`](#Navigation lists)
+- `<noscript>`
+- `<object>`
+- [`<ol>`](#Lists)
+- `<optgroup>`
+- `<option>`
+- `<output>`
+- `<p>`
+- `<param>`
+- `<picture>`
+- `<progress>`
+- `<q>`
+- `<s>`
+- `<samp>`
+- `<script>`
+- `<section>`
+- `<select>`
+- `<small>`
+- `<source>`
+- `<strong>`
+- `<style>`
+- `<summary>`
+- `<svg>`
+- `<table>`
+- `<tbody>`
+- `<td>`
+- `<template>`
+- `<textarea>`
+- `<tfoot>`
+- `<th>`
+- `<thead>`
+- `<time>`
+- `<title>`
+- `<tr>`
+- `<track>`
+- `<u>`
+- [`<ul>`](#Lists)
+- `<var>`
+- `<video>`
+- `<wbr>`
 
 ## Lists
 
