--- a/app/notes/html-concepts.mdx
+++ b/app/notes/html-concepts.mdx
@@ -88,7 +88,7 @@ It is better to use non-semantic elements (like `<div>` and `<span>`) than the w
 - `<mark>`
 - `<meta>`
 - `<meter>`
-- [`<nav>`](#Navigation lists)
+- [`<nav>`](#Navigation%20lists)
 - `<noscript>`
 - `<object>`
 - [`<ol>`](#Lists)
