--- a/app/notes/html-concepts.mdx
+++ b/app/notes/html-concepts.mdx
@@ -54,13 +54,13 @@ It is better to use non-semantic elements (like `<div>` and `<span>`) than the w
 - `<colgroup>`
 - `<data>`
 - `<datalist>`
-- `<dd>`
+- [`<dd>`](#description-lists)
 - `<del>`
 - `<details>`
 - `<dfn>`
 - `<dialog>`
-- `<dl>`
-- `<dt>`
+- [`<dl>`](#description-lists)
+- [`<dt>`](#description-lists)
 - `<em>`
 - `<embed>`
 - `<fieldset>`
@@ -68,7 +68,7 @@ It is better to use non-semantic elements (like `<div>` and `<span>`) than the w
 - `<figure>`
 - `<footer>`
 - `<form>`
-- `<h1> to <h6>`
+- [`<h1> to <h6>`](#headings)
 - `<head>`
 - `<header>`
 - `<hr>`
@@ -81,17 +81,17 @@ It is better to use non-semantic elements (like `<div>` and `<span>`) than the w
 - `<kbd>`
 - `<label>`
 - `<legend>`
-- [`<li>`](#Lists)
+- [`<li>`](#lists)
 - `<link>`
 - `<main>`
 - `<map>`
 - `<mark>`
 - `<meta>`
 - `<meter>`
-- [`<nav>`](#Navigation%20lists)
+- [`<nav>`](#navigation-lists)
 - `<noscript>`
 - `<object>`
-- [`<ol>`](#Lists)
+- [`<ol>`](#lists)
 - `<optgroup>`
 - `<option>`
 - `<output>`
@@ -124,7 +124,7 @@ It is better to use non-semantic elements (like `<div>` and `<span>`) than the w
 - `<tr>`
 - `<track>`
 - `<u>`
-- [`<ul>`](#Lists)
+- [`<ul>`](#lists)
 - `<var>`
 - `<video>`
 - `<wbr>`
@@ -272,6 +272,11 @@ That means that this is valid html
 ```
 
 As a general rule I don't recommend writing html like this, as it can be hard to tell when an element is meant to end or meant to nest, especially when the formatting isn't as clean as possible.
+
+## Modified content
+
+The `<ins>` and `<del>` tags are used to show content that has been either inserted or removed.
+
 
 ## Elements with no closing tags
 
